# PMaaS

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SECURITY_REVIEW.md  pyproject.toml
.claude/commands/: changelog.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: changelog-ai.yml  release-pr.yml  release.yml  test.yml
app/: main.py  meetings.py
tests/: test_api.py
