[tool.poetry]
name = "pmaas"
version = "1.0.0"
description = "Pub Meeting as a Service - Generate pun-based meeting names for pub gatherings"
authors = ["marco308"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.32.0"
slowapi = "^0.1.9"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
httpx = "^0.27.0"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
